# Azienda

./: Cargo.toml  PROJECT_DESCRIPTION.md  README.md  dfx.json  package-lock.json  package.json
src/: README.md
src/crypto_hire_backend/: Cargo.toml  crypto_hire_backend.did
src/crypto_hire_backend/src/: lib.rs
src/crypto_hire_frontend/: package.json  vite.config.js
src/crypto_hire_frontend/src/: App.js
